test/ui/tests/lowering/misplaced-attributes.stderr
error[E013]: attribute `intrinsic` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:5:1
  |
5 | @intrinsic
  | ^^^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:7:1
  |
7 | use self.()
  | ----------- incompatible item
  |
 note: attribute `intrinsic` can only be ascribed to function or data declarations

error[E013]: attribute `intrinsic` is ascribed to a use-declaration
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:6:1
  |
6 | @intrinsic
  | ^^^^^^^^^^ misplaced attribute
  |
 --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:7:1
  |
7 | use self.()
  | ----------- incompatible item
  |
 note: attribute `intrinsic` can only be ascribed to function or data declarations

error[E013]: attribute `intrinsic` is ascribed to a use-declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:9:1
   |
 9 | @intrinsic @abstract @(location "/")
   | ^^^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:10:1
   |
10 | use something.substantial.(root0 root1)
   | --------------------------------------- incompatible item
   |
  note: attribute `intrinsic` can only be ascribed to function or data declarations

error[E013]: attribute `abstract` is ascribed to a use-declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:9:12
   |
 9 | @intrinsic @abstract @(location "/")
   |            ^^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:10:1
   |
10 | use something.substantial.(root0 root1)
   | --------------------------------------- incompatible item
   |
  note: attribute `abstract` can only be ascribed to data declarations

error[E013]: attribute `location` is ascribed to a use-declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:9:22
   |
 9 | @intrinsic @abstract @(location "/")
   |                      ^^^^^^^^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:10:1
   |
10 | use something.substantial.(root0 root1)
   | --------------------------------------- incompatible item
   |
  note: attribute `location` can only be ascribed to module declarations

error[E013]: attribute `include` is ascribed to a function declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:12:1
   |
12 | @include
   | ^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:13:1
   |
13 |   binding: Binding =
   |  _-
14 | |     @intrinsic make-binding @(public super) resource
   | |____________________________________________________- incompatible item
   |
  note: attribute `include` can only be ascribed to text literals

error[E013]: attribute `intrinsic` is ascribed to a path expression
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:14:5
   |
14 |     @intrinsic make-binding @(public super) resource
   |     ^^^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:14:16
   |
14 |     @intrinsic make-binding @(public super) resource
   |                ------------ incompatible item
   |
  note: attribute `intrinsic` can only be ascribed to function or data declarations

error[E013]: attribute `public` is ascribed to a path expression
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:14:29
   |
14 |     @intrinsic make-binding @(public super) resource
   |                             ^^^^^^^^^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:14:45
   |
14 |     @intrinsic make-binding @(public super) resource
   |                                             -------- incompatible item
   |
  note: attribute `public` can only be ascribed to declarations except constructors and module headers

error[E013]: attribute `public` is ascribed to a constructor declaration
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:17:5
   |
17 |     @public manifest
   |     ^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:17:13
   |
17 |     @public manifest
   |             -------- incompatible item
   |
  note: attribute `public` can only be ascribed to declarations except constructors and module headers

error[E015]: a mandatory type annotation is missing on the declaration `manifest`
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:17:21
   |
17 |     @public manifest
   |                    >< 
   |
  help: provide a type annotation for the declaration with `: ?type`

error[E013]: attribute `static` is ascribed to a path pattern
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:21:9
   |
21 |         @static box => it
   |         ^^^^^^^ misplaced attribute
   |
  --> ${DIRECTORY}/lowering/misplaced-attributes.lushui:21:17
   |
21 |         @static box => it
   |                 --- incompatible item
   |
  note: attribute `static` can only be ascribed to expressions

error: aborting due to 11 previous errors
 note: the errors E013 and E015 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

